--- a/style.css
+++ b/style.css
@@ -61,3 +61,15 @@ code {
 em {
   font-style: italic;
 }
+
+div.quote > span {
+  padding: 0 0 0 20px;
+}
+
+q::before {
+  content: open-quote;
+}
+
+q::after {
+  content: close-quote;
+}
