Update styling of article list

--- a/style.css
+++ b/style.css
@@ -35,10 +35,6 @@ a:hover {
   text-decoration: underline;
 }
 
-dd {
-  margin: 0px 0px 20px 40px;
-}
-
 .date {
   font-family: Tahoma, sans-serif;
   font-size: 0.9em;
@@ -74,6 +70,10 @@ q::after {
   content: close-quote;
 }
 
+dd {
+  margin: 0px 0px 20px 40px;
+}
+
 dd p:first-child {
   margin: 0 0 20px 0;
 }
@@ -88,6 +88,19 @@ dd p:only-child {
 
 dd figure.quote {
   margin: 0;
+}
+
+dl.articles dt {
+  float: left;
+  clear: left;
+}
+
+dl.articles dt::after {
+  content: "\00a0\00a0";
+}
+
+dl.articles dd {
+  margin: 0px;
 }
 
 figure.quote figcaption {
