--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   color: #000;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
   font-family: Tahoma, sans-serif;
   font-weight: normal;
   margin: 40px 0px 20px;
@@ -24,6 +24,10 @@ h2 {
 
 h3 {
   font-size: 1.2em;
+}
+
+h4 {
+  font-size: 1.05em;
 }
 
 a {
@@ -48,10 +52,11 @@ pre code {
 code {
   font-family: 'Courier New', monospace;
   font-size: 0.8em;
+  padding: 0 2px 0 2px;
   border: 1px solid #999;
   border-radius: 2px;
   background-color: #eee;
-  white-space: pre-line;
+  white-space: pre-wrap;
 }
 
 em {
