--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ a:hover {
 
 pre code {
   display: block;
-  padding: 0 5px 0 5px;
+  padding: 10px;
 }
 
 code {
@@ -56,7 +56,7 @@ code {
   border: 1px solid #999;
   border-radius: 2px;
   background-color: #eee;
-  white-space: pre-wrap;
+  overflow-x: auto;
 }
 
 em {
